--- a/src/assets/css/blocks/_header.scss
+++ b/src/assets/css/blocks/_header.scss
@@ -6,6 +6,10 @@
   font-family: consolas;
   letter-spacing: 1px;
   font-weight: 600;
+  pointer-events: none;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
   
   &__container {
     display: flex;
