--- a/src/assets/css/blocks/_header.scss
+++ b/src/assets/css/blocks/_header.scss
@@ -8,12 +8,14 @@
   font-weight: 600;
   pointer-events: none;
   // position: absolute;
-  // top: 0;
+  // top: 20px;
   // left: 0;
+  // z-index: -1;
   
   &__container {
     display: flex;
     align-items: center;
+    // pointer-events: none;
     justify-content: space-between;
   }
   
