--- a/src/assets/css/blocks/_btn.scss
+++ b/src/assets/css/blocks/_btn.scss
@@ -16,9 +16,56 @@
   color: var(--btn-color);
   // letter-spacing: 0.06em;
   transition: .6s;
+  
+  @include desctops {
+    width: 52px;
+    height: 52px;
+  }
+  
+  @media screen and (max-width: 1000px) {
+    width: 48px;
+    height: 48px;
+  }
+  @media screen and (max-width: 920px) {
+    width: 42px;
+    height: 42px;
+  }
+  @include tablets {
+    width: 38px;
+    height: 38px;
+    font-size: 15px;
+  }
+  @include phones {
+    width: 32px;
+    height: 32px;
+  }
+
 
   &.Backspace {
     width: 160px;
+    
+    @include desctops {
+      width: 142px;
+      height: 52px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      width: 128px;
+      height: 48px;
+    }
+    @media screen and (max-width: 920px) {
+      width: 112px;
+      height: 42px;
+    }
+    @include tablets {
+      width: 88px;
+      height: 38px;
+    }
+    @include phones {
+      width: 62px;
+      height: 32px;
+    }
+  
   }
 
   &.Tab {
@@ -27,14 +74,83 @@
 
   &.CapsLock {
     width: 130px;
+    
+    @include desctops {
+      width: 142px;
+      height: 52px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      width: 128px;
+      height: 48px;
+    }
+    @media screen and (max-width: 920px) {
+      width: 112px;
+      height: 42px;
+    }
+    @include tablets {
+      width: 88px;
+      height: 38px;
+    }
+    @include phones {
+      width: 62px;
+      height: 32px;
+    }
+
   }
 
   &.Enter {
     width: 150px;
+    
+    @include desctops {
+      width: 142px;
+      height: 52px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      width: 128px;
+      height: 48px;
+    }
+    @media screen and (max-width: 920px) {
+      width: 112px;
+      height: 42px;
+    }
+    @include tablets {
+      width: 88px;
+      height: 38px;
+    }
+    @include phones {
+      width: 62px;
+      height: 32px;
+    }
+
   }
 
   &.ShiftLeft {
     width: 150px;
+    
+    @include desctops {
+      width: 142px;
+      height: 52px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      width: 128px;
+      height: 48px;
+    }
+    @media screen and (max-width: 920px) {
+      width: 112px;
+      height: 42px;
+    }
+    @include tablets {
+      width: 88px;
+      height: 38px;
+    }
+    @include phones {
+      width: 62px;
+      height: 32px;
+    }
+
   }
 
   &.ShiftRight {
@@ -51,6 +167,29 @@
 
   &.Space {
     width: 414px;
+    
+    @include desctops {
+      width: 372px;
+      height: 52px;
+    }
+    
+    @media screen and (max-width: 1000px) {
+      width: 328px;
+      height: 48px;
+    }
+    @media screen and (max-width: 920px) {
+      width: 282px;
+      height: 42px;
+    }
+    @include tablets {
+      width: 228px;
+      height: 38px;
+    }
+    @include phones {
+      width: 182px;
+      height: 32px;
+    }
+
   }
 
   &:before {
@@ -67,6 +206,13 @@
     border-bottom: 1px solid #0004;
     border-top: 1px solid #0009;
     transition: .6s;
+    
+    @include desctops {
+      top: 1px;
+      left: 1px;
+      bottom: 5px;
+      right: 3px;
+    }
   }
   
   &__content {
@@ -77,6 +223,18 @@
       left: 8px;
       font-size: 16px;
       z-index: 1;
+      
+      @include desctops {
+        top: 2px;
+        left: 4px;
+        font-size: 13px;
+      }
+      
+      @include tablets {
+        top: 1px;
+        left: 2px;
+        font-size: 12px;
+      }
     }
   
     &--main {
